# stochastic-prac

./: .gitmodules  pyproject.toml
notebooks/: BrownianMotion.txt  CoxIngersollRoss.txt  DEXUSEU.csv  DGS10.txt  OrnsteinUhlenbeck.txt  lab1.ipynb  lab2-addition.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab7.ipynb
