[tool.poetry]
name = "stochastic-prac"
version = "0.1.0"
description = ""
authors = ["Vladislav Illarionov <vladislavillarionov32@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
stochastic_simulation = { path = "stochastic-simulation", develop = true }
ipykernel = "^6.19.3"
numpy = "^1.24.0"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
pymle = {git = "https://github.com/jkirkby3/pymle.git"}
numdifftools = "^0.9.41"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
